// Vitest Snapshot v1

exports[`CdrImg > when arbitrary HTML attrs are passed > renders correctly 1`] = `
<img
  alt=""
  class="cdr-image"
  loading="lazy"
  src="/src/dev/static/cedar-350x150.jpg"
  style="--cdr-img-aspect-ratio: 1/1;"
/>
`;

exports[`CdrImg > when crop and ratio and radius and responsive is set > renders correctly 1`] = `
<img
  alt="crop left"
  class="cdr-image"
  modifier="responsive"
  src="/src/dev/static/cedar-1920x1080.jpg"
  style="--cdr-img-aspect-ratio: 1/1; --cdr-img-object-position: left; --cdr-img-object-fit: cover; --cdr-img-border-radius: 4rem;"
/>
`;

exports[`CdrImg > with just the alt text set > renders correctly 1`] = `
<img
  alt="test alt"
  class="cdr-image"
  src="/src/dev/static/cedar-350x150.jpg"
/>
`;
